--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		]
 	},
 	"dependencies": {
+		"@react-email/render": "^0.0.12",
+		"nodemailer": "^6.9.13",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
