--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ typing-extensions = "*"
 flask-jwt-extended = "*"
 flask-bcrypt = "*"
 bcrypt = "*"
+sendgrid = "*"
 
 [requires]
 python_version = "3.10"
