--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"react-dom": "^16.8.4",
 		"react-hook-form": "^7.51.1",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"sweetalert": "^2.1.2"
 	}
 }
